--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,21 @@
 {
-  "name": "DuckSimulator (.NET 10)",
-  "image": "mcr.microsoft.com/devcontainers/dotnet:1-10.0",
+  "name": "DuckSimulator DevContainer",
+  "image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
+
+  "features": {
+    "ghcr.io/devcontainers/features/dotnet:2": {
+      "version": "10.0"
+    }
+  },
+
+  "postCreateCommand": "sudo apt-get update && sudo apt-get install -y libfontconfig1 libfreetype6 && dotnet --info",
+
   "customizations": {
     "vscode": {
       "extensions": [
-        "ms-dotnettools.csharp",
-        "ms-azuretools.vscode-docker"
+        "ms-dotnettools.csharp"
       ]
     }
-  },
-  "postCreateCommand": "dotnet --info && dotnet restore",
-  "remoteUser": "vscode"
+  }
 }
+
